--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </a>
 
 <div id='body_div'>
-		<nav id='nav_bar'>
+		<nav id='nav_bar_index'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
 			<a href="#myanchor" class="w3-bar-item w3-button"><img src="logo/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
@@ -68,7 +68,7 @@
 	</p>
 	
 	</div>
-	<h6 class="enlace" href="AboutUs.html"> more about FanRobotArms</h6>
+	<a class="enlace" href="AboutUs.html"> more about FanRobotArms</a>
 
 		
   <!-- Project Section -->
