--- a/integration.html
+++ b/integration.html
@@ -18,7 +18,7 @@
 <div id='body_div'>
 		<nav id='nav_bar'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
-			<a href="#top" class="w3-bar-item w3-button"><img src="imgSlide/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
+			<a href="#myanchor" class="w3-bar-item w3-button"><img src="logo/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
 			  <a href="index.html#projects" class="w3-bar-item w3-button">Projects</a>
@@ -32,31 +32,33 @@
     <h1 style="padding-top: 40px; margin-top: -40px;"></h1>
 </a>
 
-<div class="topnav" id="myTopnav">
+	<div class="topnav" id="myTopnav">
 	<div class="blockBar">
-		<a class="active" href="index.html#banner">HOME</a>
+		<a href="index.html#banner">HOME</a>
 		<a href="products.html#usedRobots">ROBOTS</a>
-		<a class="active" href="#welding">WELDING </a>
-		<a class="active" href="#milling">MILLING PACKAGE</a>
+		<a class="active"  href="integration.html">WELDING & MILLING</a>
 		<a href="spareparts.html#spareParts">SPARE PARTS</a>
-	<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+		<a href="AboutUs.html">ABOUT US</a>
+		<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
-</div>
+	</div>
 
 
 
 <!-- CUERPO DE LA PAGINA	-->
+<div class="cuerpo">
+
 
   <div class="w3-container w3-padding-32" id="welding">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Welding</h3>
+	<h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Welding</h3>
   </div>
 
   <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">1st project test</div>
-        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
-      </div>
+	<div class="w3-col l3 m6 w3-margin-bottom">
+	  <div class="w3-display-container">
+		<div class="w3-display-topleft w3-black w3-padding">1st project test</div>
+		<img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+	  </div>
 												<div>
 													<h3>descripcion</h3>
 												</div>
