--- a/AboutUs.html
+++ b/AboutUs.html
@@ -26,7 +26,7 @@
 <div id='body_div'>
 		<nav id='nav_bar'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
-			<a href="#top" class="w3-bar-item w3-button"><img src="imgSlide/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
+			<a href="#myanchor" class="w3-bar-item w3-button"><img src="logo/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
 			  <a href="index.html#projects" class="w3-bar-item w3-button">Projects</a>
@@ -40,16 +40,16 @@
     <h1 style="padding-top: 40px; margin-top: -40px;"></h1>
 </a>
 
-<div class="topnav" id="myTopnav">
+	<div class="topnav" id="myTopnav">
 	<div class="blockBar">
 		<a href="index.html#banner">HOME</a>
 		<a href="products.html#usedRobots">ROBOTS</a>
-		<a href="integration.html#welding">WELDING </a>
-		<a href="integration.html#milling">MILLING PACKAGE</a>
+		<a href="integration.html">WELDING & MILLING</a>
 		<a href="spareparts.html#spareParts">SPARE PARTS</a>
-	<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+		<a class="active" href="AboutUs.html">ABOUT US</a>
+		<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
-</div>
+	</div>
 
 
 
