added proper images to index height 170px
same size for the collections max height 170px

--- a/index.html
+++ b/index.html
@@ -79,42 +79,42 @@
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">1st project test</div>
-        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding">palletization</div>
+        <img class="albumCollection" src="./imgSlide/indexProjects/palletization.jpg" alt="palletization">
       </div>
 												<div>
-													<h3>descripcion</h3>
+													<h3>palletization</h3>
 												</div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">2st project test</div>
-        <img src="./imgSlide/smaller/slide3.png" alt="test" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding">Welding</div>
+        <img class="albumCollection" src="./imgSlide/indexProjects/welding.jpg" alt="test">
       </div>
 												<div>
-													<h3>descripcion</h3>
+													<h3>Welding</h3>
 												</div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">3st project test</div>
-        <img src="./imgSlide/smaller/slide1.png" alt="test" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding">Milling</div>
+        <img class="albumCollection" src="./imgSlide/indexProjects/milling2.jpg" alt="Milling">
       </div>
 												<div>
-													<h3>descripcion</h3>
+													<h3>Milling</h3>
 												</div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">4st project test</div>
-        <img src="./imgSlide/smaller/slide4.png" alt="test" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding">Cutting</div>
+        <img class="albumCollection" src="./imgSlide/indexProjects/waterjet.jpg" alt="Cutting">
       </div>
 												<div>
-													<h3>descripcion</h3>
+													<h3>waterjet cutting</h3>
 												</div>
     </div>
   </div>
-
+<!--
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
