--- a/AboutUs.html
+++ b/AboutUs.html
@@ -24,7 +24,7 @@
 <body>
 
 <div id='body_div'>
-		<nav id='nav_bar'>
+		<nav id='nav_bar_index'>
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
 			<a href="#myanchor" class="w3-bar-item w3-button"><img src="logo/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
