change top top bar
gotr rid of double about us

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 			<a href="#myanchor" class="w3-bar-item w3-button"><img src="logo/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
 			  <a href="products.html" class="w3-bar-item w3-button">Products</a>
-			  <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-			  <a href="AboutUs.html" class="w3-bar-item w3-button active">About Us</a>
+			  <a href="#projects" class="w3-bar-item w3-button active">Projects</a>
 			  <a href="#contact" class="w3-bar-item w3-button">Contact</a>
 			</div>
 		  </div>
