--- a/spareparts.html
+++ b/spareparts.html
@@ -20,9 +20,8 @@
 		  <div class="nav_bar w3-bar w3-white w3-wide w3-padding w3-card-2">
 			<a href="#myanchor" class="w3-bar-item w3-button"><img src="logo/logoNowhite.png" alt="fanrobotarms" height="25px"> FanRobotArms</a>			
 			<div class="w3-right w3-hide-small">
-			  <a href="products.html#products" class="w3-bar-item w3-button">Products</a>
+			  <a href="products.html#products" class="w3-bar-item w3-button active">Products</a>
 			  <a href="index.html#projects" class="w3-bar-item w3-button">Projects</a>
-			  <a href="AboutUs.html" class="w3-bar-item w3-button active">About Us</a>
 			  <a href="index.html#contact" class="w3-bar-item w3-button">Contact</a>
 			</div>
 		  </div>
